# obsidian-to-latex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
.obsidian/: app.json  workspace.json
examples/: right widgeting.md
examples/feature_guide/: Sprocketing.md  Widget XP.md  Widget.md  Widgeting.md  definition.md  glossary.md
src/obsidian_to_latex/: __init__.py  document.tex  embedded_files.py  obsidian_path.py  obsidian_to_latex.py  process_markdown.py
tests/obsidian_to_latex/: test_embedded_files.py  test_obsidian_to_latex.py  test_process_markdown.py
