[tool.poetry]
authors = ["Ryan Bartling <ryan.bartling@gmail.com>"]
description = "Convert Obsidian vault documents to latex"
license = "mit"
name = "obsidian_to_latex"
readme = "README.md"
version = "0.1.0"

[tool.poetry.scripts]
obsidian_to_latex = "obsidian_to_latex.obsidian_to_latex:main"

[tool.poetry.dependencies]
click = "^8.1.3"
colored-traceback = "^0.3.0"
pydantic = "^1.10.4"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
behave = "^1.2.6"
black = "^22.12.0"
coverage = "^7.1.0"
devtools = "^0.10.0"
isort = "^5.11.4"
pre-commit = "^3.0.1"
pylint = "^2.15.10"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
line_length = 79
profile = "black"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
parallel = true
source = ["obsidian_to_latex"]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.pytest.ini_options]
addopts = [
  "-q",
  "--cov-report=term-missing:skip-covered",
  "--cov",
  "--durations=5",
  "--ignore=acceptance_test",
]
testpaths = ["tests"]
